# kdev-ruby

./: .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  Gemfile  Guardfile  HACKING  Messages.sh  README  README.md  contextbuilder.cpp  contextbuilder.h  debug.h  declarationbuilder.cpp  declarationbuilder.h  editorintegrator.cpp  highlighting.cpp  highlighting.h  kdevruby_doc.rb  kdevrubylanguagesupport.json  kdevrubysupport.categories  kdevrubysupport.desktop  kdevrubysupport.desktop.cmake  kdevrubysupport.qrc  kdevrubysupport.rc  kernel.rb  languagesupport.cpp  languagesupport.h  launcher.cpp  launcher.h  parsejob.cpp  parsejob.h  parser.cpp  parser.h  ruby.kdev4  rubyast.cpp  rubyast.h  rubydefs.h  rubyhighlighting.cpp  rubyhighlighting.h  (+7 more)
app_templates/: CMakeLists.txt
app_templates/rubygem/: %{APPNAMELC}.gemspec  Rakefile  rubygem.kdevtemplate
app_templates/simple_ruby_app/: simple_ruby_app.kdevtemplate
builtins/: kdevelop_builtins.rb
codegen/: refactoring.cpp  refactoring.h  rubynewclass.cpp  rubynewclass.h  rubyrefactoring.cpp  rubyrefactoring.h
completion/: CMakeLists.txt  completionexport.h  context.cpp  context.h  debug.h  helpers.cpp  helpers.h  keyworditem.cpp  keyworditem.h  model.cpp  model.h  worker.cpp  worker.h
completion/items/: keyworditem.cpp  keyworditem.h  normalitem.cpp  normalitem.h  requirefileitem.cpp  requirefileitem.h
completion/tests/: CMakeLists.txt  completion.cpp  completion.h
documentation/: builtins.rb  kdevruby_doc.rb
duchain/: CMakeLists.txt  contextbuilder.cpp  contextbuilder.h  debug.h  declarationbuilder.cpp  declarationbuilder.h  duchainexport.h  editorintegrator.cpp  editorintegrator.h  expressionvisitor.cpp  expressionvisitor.h  helpers.cpp  helpers.h  loader.cpp  loader.h  rubyducontext.cpp  rubyducontext.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/declarations/: classdeclaration.cpp  classdeclaration.h  functiondeclaration.cpp  functiondeclaration.h  methoddeclaration.cpp  methoddeclaration.h  moduledeclaration.cpp  moduledeclaration.h  variabledeclaration.cpp  variabledeclaration.h
duchain/navigation/: declarationnavigationcontext.cpp  declarationnavigationcontext.h  includenavigationcontext.cpp  includenavigationcontext.h  navigationwidget.cpp  navigationwidget.h
duchain/rails/: autoloader.cpp  autoloader.h
duchain/tests/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  debug.h  duchain.cpp  duchain.h  duchaintestbase.cpp  duchaintestbase.h  uses.cpp  uses.h
duchain/types/: classtype.cpp  classtype.h  objecttype.cpp  objecttype.h  variablelengthcontainer.cpp  variablelengthcontainer.h
file_templates/: CMakeLists.txt
navigation/: CMakeLists.txt  navigationexport.h  railsdataprovider.cpp  railsdataprovider.h  railsswitchers.cpp  railsswitchers.h  viewsdataprovider.cpp  viewsdataprovider.h
navigation/tests/: CMakeLists.txt  switchers.cpp  switchers.h
parser/: CMakeLists.txt  README  README.md  TODO  ast.cpp  ast.h  astvisitor.cpp  astvisitor.h  debug.h  decoder.h  export.h  hash.c  interface.h  main.c  main.cpp  node.c  node.h  old-parser.cpp  old-parser.h  old-rubyast.h  old-visitor.cpp  parser.c  parser.cpp  parser.h  parser.y  parserexport.h  parsesession.cpp  parsesession.h  ruby.g  ruby.ll  ruby_io.cpp  rubyast.cpp  rubyast.h  rubyastvisitor.cpp  rubyastvisitor.h  rubylexer.h  rubyparser.cpp  rubyparser.h  rubyparserexport.h  visitor.cpp  (+1 more)
parser/tests/: array.rb  array.txt  assign.txt  begin_end.rb  begin_end.txt  block.rb  block.txt  case.rb  case.txt  class.rb  class.txt  comment.txt  except.rb  except.txt  for.rb  for.txt  function.rb  function.txt  global.rb  hash.rb  hash.txt  heredoc.txt  ifelse.rb  ifelse.txt  method_call.rb  method_call.txt  modifiers.rb  modifiers.txt  module.rb  module.txt  numeric.txt  parser_test.rb  regexp.rb  regexp.txt  semicolon.txt  shell.rb  shell.txt  simple.rb  simple.txt  string.rb  (+4 more)
parser/tests/assert_same/: README  init.rb
parser/tests/assert_same/lib/: array_diff.rb  text_diff.rb
parser/tests/assert_same/test/: assert_same_test.rb
parser/tests/data/: array.txt  assign.rb  assign.txt  block.txt  case.rb  case.txt  class.rb  comment.rb  except.txt  function.rb  function.txt  global.txt  heredoc.rb  module.rb  numeric.rb  regexp.txt  semicolon.rb  shell.txt  simple.txt  string.rb  string.txt  utf8.rb  utf8.txt
parser/tools/: fancy.rb  generate.rb  gperf.rb  gperf.txt  holy.rb  parser_spec.rb  parser_test.rb  suite.rb
parser/tools/assert_same/: LICENSE  Rakefile
parser/tools/assert_same/lib/: assert_same.rb
parser/tools/tests/: array.rb  array.txt  assign.rb  assign.txt  begin_end.rb  begin_end.txt  block.rb  block.txt  case.rb  case.txt  class.rb  class.txt  comment.txt  except.rb  except.txt  for.txt  function.rb  function.txt  global.rb  global.txt  hash.rb  hash.txt  heredoc.rb  heredoc.txt  ifelse.rb  ifelse.txt  method_call.rb  method_call.txt  modifiers.rb  modifiers.txt  module.txt  numeric.rb  numeric.txt  operators.rb  operators.txt  regexp.rb  regexp.txt  rocket.rb  rocket.txt  ruby20.rb  (+12 more)
parser/tools/tests/comments/: expected.txt  main.c  test.rb
parser/tools/tests/errors/: from18to19.rb  from19to20.rb  from20to21.rb
po/ar/: kdevruby.po
po/bs/: kdevruby.po
po/ca/: kdevruby.po
po/ca@valencia/: kdevruby.po
po/cs/: kdevruby.po
po/de/: kdevruby.po
po/en_GB/: kdevruby.po
po/eo/: kdevruby.po
po/es/: kdevruby.po
po/et/: kdevruby.po
po/eu/: kdevruby.po
po/fi/: kdevruby.po
po/fr/: kdevruby.po
po/ga/: kdevruby.po
rails/: CMakeLists.txt  dataprovider.cpp  dataprovider.h  helpers.cpp  helpers.h  quickopendata.cpp  quickopendata.h  railsdataprovider.cpp  railsdataprovider.h  railsexport.h  railsswitchers.cpp  railsswitchers.h  support.cpp  support.h  switchers.cpp  switchers.h
rails/tests/: CMakeLists.txt  rails.cpp  rails.h
tests/: CMakeLists.txt  ruby186-test.rb  ruby_fulltestsuite.cpp  ruby_fulltestsuite.h  rubytestutils.h
(+31 files in other folders)
